--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "package-menu-cli",
   "version": "1.0.0",
   "description": "Displays menu of scripts from folder package.json",
-  "main": "index.js",
+  "main": "cli.js",
+  "bin": {
+    "package-menu": "cli.js"
+  },
   "scripts": {
+    "eslint": "eslint \"./**/*.js\"",
     "test": "mocha",
     "menu": "node ./cli.js"
-  },
-  "bin": {
-    "package-menu": "./cli.js"
   },
   "keywords": [
     "package",
@@ -25,5 +26,9 @@
     "conf": "^0.11.2",
     "get-stdin": "^5.0.1",
     "meow": "^3.7.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
   }
 }
