fixed table size for small terminal

--- a/package.json
+++ b/package.json
@@ -31,5 +31,16 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^3.2.0"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mikeerickson/pkg-menu-cli.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mikeerickson/pkg-menu-cli/issues"
+  },
+  "homepage": "https://github.com/mikeerickson/pkg-menu-cli#readme"
 }
