--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "package-menu-cli",
   "version": "1.1.1",
-  "description": "Displays menu of scripts from folder package.json",
+  "description": "Displays menu of scripts from directory containing `package.json`",
   "main": "cli.js",
   "bin": {
     "package-menu": "cli.js"
@@ -24,8 +24,6 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "cli-table2": "^0.2.0",
-    "conf": "^0.11.2",
-    "get-stdin": "^5.0.1",
     "meow": "^3.7.0"
   },
   "devDependencies": {
