--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "cli-table2": "^0.2.0",
-    "meow": "^3.7.0"
+    "execa": "^0.5.0",
+    "meow": "^3.7.0",
+    "update-notifier": "^1.0.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
