--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "keywords": [
     "package",
     "menu",
-    "script",
+    "scripts",
     "cli"
   ],
   "author": "Mike Erickson, codedungeon@gmail.com",
@@ -24,12 +24,13 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "cli-table2": "^0.2.0",
-    "execa": "^0.5.0",
     "meow": "^3.7.0",
+    "semver-compare": "^1.0.0",
     "update-notifier": "^1.0.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "latest-version": "^2.0.0",
     "mocha": "^3.2.0"
   },
   "directories": {
