--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "cli-table2": "^0.2.0",
+    "execa": "0.6.0",
     "meow": "^3.7.0",
     "semver-compare": "^1.0.0",
-    "update-notifier": "^1.0.3"
+    "update-notifier": "^1.0.3",
+    "ntl": "1.1.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
